revert endringer i pdp